--- a/java-mvc-capas-axios/frontend-react/src/components/admin/PerfilAdmin.css
+++ b/java-mvc-capas-axios/frontend-react/src/components/admin/PerfilAdmin.css
@@ -81,6 +81,7 @@
   min-height: calc(100vh - 200px);
   background-color: #f9fafb;
   padding: 0;
+  padding-top: 2rem;
 }
 
 .gestion-menu,
@@ -89,7 +90,7 @@
 .reportes {
   max-width: 100%;
   margin: 0;
-  padding: 2rem;
+  padding: 0 2rem 2rem 2rem;
 }
 
 .gestion-menu h3,
